--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mock Lists</title>
 </head>
 <body>
-        <p>hello world</p>
+        <h1>hello world</h1>
+        <p>Sample Lists without API using Mock Data</p>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
