--- a/public/prod.html
+++ b/public/prod.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world</p>
+    <p>List of Products with mock data</p>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
