added wireframe for signup

--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,18 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <p>hello world</p>
+    <form action="#" class="sign-up"></div>
+        <label for="first-name">First Name</label>
+            <input type="text" id="first-name" placeholder="John">
+        <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" placeholder="Smith">
+        <label for="email">Email</label>
+            <input type="text" id="email" placeholder="colorsof@thewind.com">
+        <label for="password">Password</label>
+            <input type="text" id="password" placeholder="myPassword123">
+        <label for="confirm-pwd">Confirm Password</label>
+            <input type="text" id="confirm-pwd" placeholder="Confirm your password">
+        <button class="create-acct">Create Account!</button>
+     </form>
 </body>
 </html>
