added mock data for lists, etc; added grocery files

--- a/public/list.html
+++ b/public/list.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world</p>
+    <h1>Create a New Shopping List</h1>
+
+    <div class="new-list">
+        <input id="search-prod" type="text" placeholder="Search">
+        <button class="new">Add item</button>
+    </div>
 </body>
 </html>
