--- a/public/signup.html
+++ b/public/signup.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up</title>
+    <link rel="stylesheet" type="text/css" href="signup.css">
+    <title>Shopper</title>
 </head>
 <body>
+    <h1>Sign up for Shopper Account</h1>
     <form action="#" class="sign-up"></div>
         <label for="first-name">First Name</label>
-            <input type="text" id="first-name" placeholder="John">
+            <input type="text" id="first-name" placeholder="John" required>
         <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" placeholder="Smith">
+            <input type="text" id="last-name" placeholder="Smith" required>
         <label for="email">Email</label>
-            <input type="text" id="email" placeholder="colorsof@thewind.com">
+            <input type="text" id="email" placeholder="colorsof@thewind.com" required>
         <label for="password">Password</label>
-            <input type="text" id="password" placeholder="myPassword123">
+            <input type="password" id="password" placeholder="myPassword123" required>
         <label for="confirm-pwd">Confirm Password</label>
-            <input type="text" id="confirm-pwd" placeholder="Confirm your password">
+            <input type="password" id="confirm-pwd" placeholder="Confirm your password" required>
         <button class="create-acct">Create Account!</button>
+        <p id="sign-in">Already have an account? <a href ="#" id="sign-in-link">Sign in</a></p>
+        
      </form>
+
 </body>
 </html>
