--- a/public/prod.html
+++ b/public/prod.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>List of Products with mock data</p>
+    <h1>List of Products with mock data</h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
