added mock data for grocery stores

--- a/public/list.html
+++ b/public/list.html
@@ -12,6 +12,15 @@
     <div class="new-list">
         <input id="search-prod" type="text" placeholder="Search">
         <button class="new">Add item</button>
+        <h2>Search by Department</h2>
+        <ul>
+            <li><a href="#">Produce</a></li>
+            <li><a href="#">Bakery</a></li>
+            <li><a href="#">Dry Goods</a></li>
+            <li><a href="#">Canned Goods</a></li>
+            <li><a href="#">Beverages</a></li>
+            <li><a href="#">Home Care and Cleaning Supplies</a></li>
+        </ul>
     </div>
 </body>
 </html>
