added files for API, added functionality to stores

--- a/public/grocery-store.html
+++ b/public/grocery-store.html
@@ -11,12 +11,10 @@
 
     <form action="#">
         <label for="select-state">Select State</label>
-        <select name="select-state" id="select-state">
-            <option value="Alabama">Alabama</option>
-            <option value="Tennessee">Tennessee</option>
-        </select>
-        <label for=""></label>
-        
+        <select name="select-state" id="select-state"></select>
+        <label for="select-city">Select City</label>
+        <select name="select-city" id=""></select>
+
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
