--- a/public/grocery-store.html
+++ b/public/grocery-store.html
@@ -20,6 +20,6 @@
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="grocery.js"></script>
+    <script type="text/javascript" src="stores.js"></script>
 </body>
 </html>
