--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
         <p>Sample Lists without API using Mock Data</p>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="lists.js"></script>
 </body>
 </html>
