--- a/public/prod.html
+++ b/public/prod.html
@@ -10,7 +10,7 @@
     <h1>List of Products with mock data</h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="prod.js"></script>
 
 </body>
 </html>
