changed jquery source

--- a/public/grocery-store.html
+++ b/public/grocery-store.html
@@ -14,10 +14,12 @@
         <select name="select-state" id="select-state"></select>
         <label for="select-city">Select City</label>
         <select name="select-city" id=""></select>
+        <label for="select-store">Select Store</label>
+        <select name="select-store" id="select-store"></select>
 
     </form>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="grocery.js"></script>
 </body>
 </html>
