--- a/public/prod.html
+++ b/public/prod.html
@@ -9,7 +9,7 @@
 <body>
     <h1>List of Products with mock data</h1>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
 
 </body>
