--- a/public/list.html
+++ b/public/list.html
@@ -22,5 +22,7 @@
             <li><a href="#">Home Care and Cleaning Supplies</a></li>
         </ul>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    
 </body>
 </html>
