--- a/public/grocery-store.html
+++ b/public/grocery-store.html
@@ -13,7 +13,7 @@
         <label for="select-state">Select State</label>
         <select name="select-state" id="select-state"></select>
         <label for="select-city">Select City</label>
-        <select name="select-city" id=""></select>
+        <select name="select-city" id="select-city"></select>
         <label for="select-store">Select Store</label>
         <select name="select-store" id="select-store"></select>
 
