--- a/public/prod.html
+++ b/public/prod.html
@@ -10,7 +10,7 @@
     <h1>List of Products with mock data</h1>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="prod.js"></script>
 
 </body>
 </html>
