added list name output

--- a/public/grocery-store.html
+++ b/public/grocery-store.html
@@ -10,12 +10,14 @@
     <h1>Find or Add Your Grocery Store</h1>
 
     <form action="#">
+        <label for="select-list">Select List to Use</label>
+            <select name="select-list" id="select-list"></select>
         <label for="select-state">Select State</label>
-        <select name="select-state" id="select-state"></select>
+            <select name="select-state" id="select-state"></select>
         <label for="select-city">Select City</label>
-        <select name="select-city" id="select-city"></select>
+            <select name="select-city" id="select-city"></select>
         <label for="select-store">Select Store</label>
-        <select name="select-store" id="select-store"></select>
+            <select name="select-store" id="select-store"></select>
 
     </form>
 
